--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
+    "@types/uuid": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
@@ -18,7 +19,8 @@
     "express": "^4.18.2",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "uuid": "^9.0.0"
   },
   "repository": {
     "type": "git",
